--- a/jetty-demo/pom.xml
+++ b/jetty-demo/pom.xml
@@ -32,6 +32,13 @@
 
     <name>jetty-demo</name>
     <artifactId>jetty-demo</artifactId>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- dependency versions -->
+        <servlet.api.version>2.4</servlet.api.version>
+    </properties>
+
 
     <build>
         <plugins>
@@ -62,6 +69,15 @@
       <artifactId>[the artifact id of the block to be mounted]</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency-->
+
+        <!-- requied start -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>${servlet.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- requied end -->
     </dependencies>
 
 </project>
