--- a/spring-v2.2/pom.xml
+++ b/spring-v2.2/pom.xml
@@ -30,10 +30,28 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
-        <finalName>spring-v2.1</finalName>
+        <finalName>spring-v2.2</finalName>
         <plugins>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
